@startuml
abstract class BaseController {
    #subSectionService: SubSectionService
    #subSectionRepository: SubSectionRepository
    #objectMapper: ObjectMapper

    + abstract updateSection(CardsContent cardsContent, String action, SubSectionKey key): String
    + abstract getSubSection(SubSectionKey key): SubSection
    # abstract getFolderName(): String
}

abstract class StringController {
    + updateSection(CardsContent cardsContent, String action)
}

LandingPageWords --|> CardsIMGsController
LandingPageSection --|> StringController
ContactUsController --|> StringController
StringController --|> BaseController

abstract class CardsIMGsController {
    + updateSection(CardsContent cardsContent, String action)
}

CardsIMGsController --|> BaseController

ClientsSecitonController --|> CardsIMGsController
LandingPageBankLogosController --|> CardsIMGsController
LandingPageCardsController --|> CardsIMGsController
ServicesSectionController --|> CardsIMGsController
AboutUsController --|> CardsIMGsController
@enduml